# hyperi-ci

./: .gitattributes  .gitignore  .hyperi-ci.yaml  .mcp.json  .releaserc.yaml  .semgrepignore  AI-TRAINING-POLICY.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  STATE.md  TODO.md  VERSION  pyproject.toml  renovate.json
.claude/: .ai-version
.claude/skills/python/: SKILL.md
.github/actions/predict-version/: action.yml
.github/actions/setup-go-tools/: action.yml
.github/actions/setup-osv-scanner/: action.yml
.github/actions/setup-runtime/: action.yml
.github/actions/setup-rust-tools/: action.yml
.github/actions/setup-semantic-release/: action.yml  default.releaserc.json
.github/workflows/: _ghcr-prune.yml  _release-tail.yml  ci.yml  go-ci.yml  python-ci.yml  release-merge.yml  rust-ci.yml  ts-ci.yml
config/: commit-types.yaml  defaults.yaml  org.yaml  runners.yaml  secrets-access.yaml  versions.yaml
docs/: ARC-RUNNERS.md  ARCHITECTURE.md  CI-DEPENDENCIES.md  CI-FLOW.md  CI-KAFKA-REDPANDA.md  CI-LESSONS.md  DESIGN.md  FLOW.md  JFROG-MIGRATION.md  LESSONS.md  MIGRATION-GUIDE.md  PGO-WORKLOAD-GUIDE.md  README.md  RUST-BUILD-OPTIMISATION.md  RUST-RELEASE-TRACK-OPTIMISATION.md  architecture.md  deployment-contract.md  flow.md  lessons.md  quality-gate.md  rust.md  typescript.md
docs/dependencies/: DEPS-PINNING.md  WORKFLOW-PINNING.md  deps-pinning.md  workflow-pinning.md
docs/deployment/: CONTRACT-IDENTITY.md  CONTRACT.md  TIERS.md  contract-identity.md  contract.md  tiers.md
docs/languages/: GO.md  PYTHON.md  RUST.md  TYPESCRIPT.md  go.md  python.md  rust.md  typescript.md
docs/migration/: CODEBERG-SECRETS-AND-CI.md  JFROG.md  ONBOARDING.md  codeberg-secrets-and-ci.md  codeberg.md  deployment-contract-tier3.md  jfrog.md  onboarding.md
docs/runtime/: PGO-BOLT.md  RUNNERS.md  TESTENV.md  pgo-bolt.md  runners.md  testenv.md
docs/specs/: 2026-05-29-issue31-atomic-frozen-graph.md  2026-05-29-issue31-workflow-pinning.md
docs/testing/: fixture-git.md
scripts/: check-workflow-interfaces.py  fixture-git.py  pre-commit-versions.sh  recover-tags.py  rehearse-branch.py  setup-rust-dev.py  sync-secrets-access.py  update-versions.py
src/hyperi_ci/: __init__.py  cli.py  common.py  config.py  detect.py  dispatch.py  gh.py  init.py  init_gitops.py  init_release.py  install_deps.py  licenses.py  logs.py  migrate.py  native_deps.py  publish_binaries.py  publish_mode.py  push.py  release.py  release_merge.py  release_rules.py  spill.py  stamp.py  tools.py  trigger.py  upgrade.py  watch.py
src/hyperi_ci/argocd/: __init__.py  gitops_push.py  stage.py
src/hyperi_ci/config/: defaults.yaml  deprecated-files.yaml  org.yaml
src/hyperi_ci/container/: __init__.py  binary_stage.py  build.py  compose.py  detect.py  labels.py  manifest.py  registry.py  stage.py  templates.py
src/hyperi_ci/deployment/: __init__.py  cli.py  contract.py  detect.py  manifest.py  registry.py  scaffold.py  stage.py
src/hyperi_ci/gitops_templates/: .gitbook.yaml  .gitignore  CODEOWNERS  README.md  mkdocs.yml  pull_request_template.md
src/hyperi_ci/helm/: __init__.py  stage.py
src/hyperi_ci/languages/: __init__.py  _build_common.py  quality_common.py
src/hyperi_ci/publish/: __init__.py  binaries.py  dispatch.py
src/hyperi_ci/quality/: __init__.py  checkov.py  commit_validation.py  deprecated_files.py  droast.py  findings.py  gitleaks.py  hadolint.py  ignores.py  install.py  kube_linter.py  kubeconform.py  lint_manifests.py  osv_scanner.py  predicted_bump.py  render.py  repo_advisor.py  (+2 more)
templates/pgo-workload/: README.md  grpc-server.sh  http-server.sh  kafka-consumer.sh  kafka-producer.sh  multi-protocol.sh
templates/testenv/: README.md  clickhouse-low-mem.xml  clickhouse.compose.yaml  redpanda.compose.yaml
test-projects/ci-test-go-app/: .gitignore  .hyperi-ci.yaml  go.mod  lib.go  version.go
test-projects/ci-test-go-minimal/: .gitignore  .hyperi-ci.yaml  go.mod  lib_test.go  main.go
test-projects/ci-test-python-app/: .gitignore  .hyperi-ci.yaml
test-projects/ci-test-python-minimal/: .hyperi-ci.yaml  pyproject.toml
test-projects/ci-test-python-minimal/src/ci_test/: __init__.py
test-projects/ci-test-python-minimal/tests/unit/: test_core.py
test-projects/ci-test-rust-app/: .gitignore  .hyperi-ci.yaml  .releaserc.yaml  Cargo.toml  Dockerfile  Makefile
test-projects/ci-test-rust-app/.github/workflows/: ci.yml
test-projects/ci-test-rust-minimal/: .gitignore  .hyperi-ci.yaml  .releaserc.yaml  Cargo.toml  Dockerfile  Makefile
test-projects/ci-test-rust-minimal/.cargo/: config.toml
test-projects/ci-test-rust-minimal/.github/workflows/: ci.yml
test-projects/ci-test-rust-minimal/Chart/: Chart.yaml  values.yaml
test-projects/ci-test-rust-minimal/Chart/templates/: _helpers.tpl  deployment.yaml
test-projects/ci-test-rust-minimal/src/: main.rs
test-projects/ci-test-ts-app/: .hyperi-ci.yaml  vitest.config.ts
test-projects/ci-test-ts-minimal/: .hyperi-ci.yaml  eslint.config.ts  package-lock.json  package.json  tsconfig.json
tests/argocd/: test_gitops_push.py  test_stage.py
tests/helm/: test_stage.py  test_stage_topology_mode.py
tests/integration/: test_rust_build_optimize.py
tests/unit/: test_build_common.py  test_checkov.py  test_cli.py  test_cli_init_gitops.py  test_cli_stitch.py  test_commit_validation.py  test_common.py  test_config.py  test_container_binary_stage.py  test_container_build.py  test_container_compose.py  test_container_detect.py  test_container_labels.py  test_container_manifest.py  test_container_registry.py  test_container_stage.py  test_container_templates.py  test_deprecated_files.py  test_detect.py  test_dispatch_alias.py  test_dispatch_status.py  test_droast.py  test_findings.py  test_fixture_git.py  test_gh.py  test_gitleaks.py  test_hadolint.py  test_init.py  test_init_gitops.py  test_init_topology.py  test_install.py  test_kube_linter.py  test_kubeconform.py  test_licenses.py  test_lint_manifests.py  test_migrate.py  test_native_deps.py  test_osv_scanner.py  test_predicted_bump.py  test_publish.py  (+28 more)
(+81 files in other folders)
