# Project:   HyperI CI
# File:      pyproject.toml
# Purpose:   Package configuration for hyperi-ci CLI tool
#
# License:   Proprietary — HYPERI PTY LIMITED
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "hyperi-ci"
dynamic = ["version"]
description = "HyperI CI/CD CLI tool — multi-language build, test, and publish automation"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    # Pin to >= so transitive resolution can pick up bug fixes / new
    # features without a manifest edit. Bump the floor when we adopt
    # new pylib APIs (e.g. deployment contract module added in 2.28).
    # The [metrics] extra is required because pylib's __init__.py
    # eagerly imports hyperi_pylib.metrics.prometheus → psutil.
    # Architectural fix (lazy metrics import) is tracked in pylib.
    "hyperi-pylib[metrics]>=2.28.0",
    "packaging>=26.0",
    "pydantic>=2.13",
    "pyyaml>=6.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
hyperi-ci = "hyperi_ci.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperi_ci"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "test-projects",   # vendored fixture trees (node_modules, .venv etc.)
    "hyperi-ai",       # submodule, not our code
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests marked @pytest.mark.slow are opt-in (they compile real
# Rust crates and take ~30-90s each). Default test runs skip them.
#   uv run pytest                    # default: skips slow tests
#   uv run pytest -m slow            # runs only slow tests
#   uv run pytest -m ""              # runs everything (empty marker expression)
addopts = "-m 'not slow'"
markers = [
    "slow: integration tests that compile real Rust crates (opt-in, ~30-90s each)",
]

[tool.vulture]
# 60% confidence flags every typer-decorated command (typer registers them
# at import time via @app.command() — vulture can't see the call site).
# 100% catches the genuine dead vars we care about without the noise.
min_confidence = 100
paths = ["src/"]

[tool.coverage.run]
source = ["hyperi_ci"]

[tool.coverage.report]
# Coverage is informational here — ci.yml doesn't pass --cov-fail-under,
# and unit-covering subprocess-driven CI orchestration is impractical.
# Keep this low so `pytest --cov` reports without failing the run.
fail_under = 30

# NOTE: no [tool.uv.sources] block here on purpose.
#
# Tempting to point `hyperi-pylib` at a local editable checkout
# (/projects/hyperi-pylib) so dev changes flow through `uv sync`,
# but that breaks two things:
#   - Dependabot's update_graph job can't resolve the path inside its
#     container — fails on every push to main, leaving the dep-graph
#     stale and GitHub's vulnerability banner inaccurate.
#   - Reproducibility for anyone whose checkout isn't at that exact
#     path.
#
# For local pylib co-development, run from this repo:
#   uv pip install -e /path/to/hyperi-pylib
# Manual install is per-developer scratch state; not in pyproject.

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    # Pulled transitively via pytest+rich+typer; pin minimum to dodge CVE-2026-4539.
    "pygments>=2.20.0",
    "ruff>=0.15.12",
]
