# Project:   CI Test Python Minimal
# File:      pyproject.toml
# Purpose:   Minimal Python package for CI pipeline testing
#
# License:   Proprietary — HYPERI PTY LIMITED
# Copyright: (c) 2026 HYPERI PTY LIMITED
#
# Zero external dependencies — install + test in seconds.
# Mirrors dfe-engine structure (hatchling, src/ layout, container, helm)
# but with trivial logic for fast CI iteration.

[project]
name = "ci-test-python"
dynamic = ["version"]
description = "Minimal Python package for CI pipeline testing"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = []

[project.scripts]
ci-test = "ci_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_test"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["ci_test"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]
